--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/completoPiume.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text fw-bolder"></p>
+                        <p class="card-text fw-bolder">Coordinato Piume</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/giacca.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text fw-bolder"></p>
+                        <p class="card-text fw-bolder">Puffer Payette</p>
                     </div>
                 </div>
             </div>
