--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/completoGrigioAtt.jpg" class="card-img-top" alt="...">
+                    <img src="img/completoMar.jpg" class="card-img-top" alt="...">
                     <div class="card-body fw-bolder">
                         <p class="card-text"></p>
                     </div>
