--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img src="img/completoMar.jpg" class="card-img-top" alt="...">
-                    <div class="card-body fw-bolder">
-                        <p class="card-text"></p>
+                    <div class="card-body">
+                        <p class="card-text fw-bolder">Coordiato Cargo</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/completoGrigioAtt.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
+                        <p class="card-text fw-bolder">Coordinato Lycra</p>
                     </div>
                 </div>
             </div>
