--- a/completi.html
+++ b/completi.html
@@ -93,13 +93,13 @@
                 </div>
                 <div class="carousel-inner" style="width: 70% !important">
                     <div class="carousel-item active">
-                        <img src="img/completoPiume.jpg" class="d-block w-100" alt="...">
+                        <img src="img/completoGrigio.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/completoPiume2.jpg" class="d-block w-100" alt="...">
+                        <img src="img/completoGrigioAtt1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/coordinatoPiume.jpg" class="d-block w-100" alt="...">
+                        <img src="img/completoGrigioAtt.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -124,13 +124,13 @@
                 </div>
                 <div class="carousel-inner" style="width: 70% !important">
                     <div class="carousel-item active">
-                        <img src="img/completoPiume.jpg" class="d-block w-100" alt="...">
+                        <img src="img/completoMar.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/completoPiume2.jpg" class="d-block w-100" alt="...">
+                        <img src="img/completoMar2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/coordinatoPiume.jpg" class="d-block w-100" alt="...">
+                        <img src="img/coordinatoMar.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
