--- a/completi.html
+++ b/completi.html
@@ -101,6 +101,9 @@
                     <div class="carousel-item">
                         <img src="img/completoGrigioAtt.jpg" class="d-block w-100" alt="...">
                     </div>
+                    <div class="carousel-item">
+                        <img src="img/grigioSpecchio.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
